<resources>
    <string name="app_name">圣阳电源</string>
    <string name="sun_sign_name">正区</string>
    <!--特殊字符为空格-->
    <string name="time_title">小时</string>
    <string name="run_status_title">运行状态 :&#160;</string>
    <string name="time_left_title">剩余时间</string>
    <string name="set_value_title">设定值</string>
    <string name="actual_value_title">实际值</string>
    <string name="product_model_title">产品型号 :&#160;</string>
    <string name="order_num_title">订单数量 :&#160;</string>
    <string name="production_stage">生产阶段 :&#160;</string>
    <string name="program_num">程序号 :&#160;</string>
    <string name="form_title_1">设定值</string>
    <string name="form_title_2">实际值</string>
    <string name="form_item_1">温度一</string>
    <string name="form_item_2">温度二</string>
    <string name="form_item_3">湿度一</string>
    <string name="form_item_4">湿度二</string>
    <string name="idle">闲置</string>
    <string name="preheating">预热</string>
    <string name="ending">结束</string>
    <string name="presolidify">预固化</string>
    <string name="solidify">固化</string>
    <string name="dry">干燥</string>
    <string name="warning">告警</string>
    <string name="device_num">设备编号 :&#160;</string>
    <string name="reduce_humidity">降温风门</string>
    <string name="exhaust_humidity">排湿风门</string>
    <string name="cycle_blower">循环风机</string>
    <string name="stream_humidity">蒸汽加湿</string>
    <string name="stream_heating">蒸汽加热</string>
    <string name="water_valve">雾化水阀</string>
    <string name="order_unit">片</string>
    <string name="previous">前进</string>
    <string name="next">后退</string>
    <string name="work_shop_name">车间编号</string>
    <string name="status_valve_able">开</string>
    <string name="status_valve_disable">关</string>
    <string name="product_stage_time">段剩余时间</string>
    <string name="overall_time">总剩余时间</string>

    <string name="WORK_SHOP_CODE">work_shop_code</string>
    <string name="FIRST_START">first_start</string>
    <string name="KANBAN_NAME">kanban_name</string>
</resources>
