<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="85dp"
        android:layout_height="45dp"
        android:layout_alignParentLeft="true"
        android:layout_centerInParent="true"
        android:src="@drawable/sunlogo" />
    <View
        android:id="@+id/adjust_view"
        android:layout_width="20dp"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@id/logo"
        android:layout_height="16dp"></View>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="55dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/sunsign" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/sun_sign_name"
        android:textColor="@color/desc_text_color" />

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@id/adjust_view"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <View
                style="@style/status_bar"
                android:background="@drawable/status_bar_idle"></View>

            <TextView
                style="@style/status_bar_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/idle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <View
                style="@style/status_bar"
                android:background="@drawable/status_bar_preheating"></View>

            <TextView
                style="@style/status_bar_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/preheating" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <View
                style="@style/status_bar"
                android:background="@drawable/status_bar_presolidify"></View>

            <TextView
                style="@style/status_bar_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/presolidify" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <View
                style="@style/status_bar"
                android:background="@drawable/status_bar_solidify"></View>

            <TextView
                style="@style/status_bar_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/solidify" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <View
                style="@style/status_bar"
                android:background="@drawable/status_bar_dry"></View>

            <TextView
                style="@style/status_bar_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dry" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <View
                style="@style/status_bar"
                android:background="@drawable/status_bar_warning"></View>

            <TextView
                style="@style/status_bar_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/warning" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>