<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:background="@color/inner_bg_color"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/stove_device"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.9"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:background="@color/inner_bg_color"
            android:orientation="vertical"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/stove_run_status_title"
                    style="@style/stove_item_txt_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/run_status_title" />

                <TextView
                    android:id="@+id/stove_run_status"
                    style="@style/stove_item_txt_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/stove_run_status_title"
                    tools:text="固化" />

                <ImageView
                    android:id="@+id/warning_status"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/alarmclose"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@id/stove_run_status"
                    android:layout_toEndOf="@+id/stove_run_status" />

                <TextView
                    style="@style/stove_item_txt_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/time_left_title"></TextView>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!--<View-->
                    <!--android:id="@+id/stove_run_status_block"-->
                    <!--android:layout_width="80dp"-->
                    <!--android:layout_height="12dp"-->
                    <!--android:layout_marginTop="2dp"-->
                    <!--tools:background="@drawable/status_bar_dry"-->
                    <!--&gt;</View>-->

                <com.daimajia.numberprogressbar.NumberProgressBar
                    android:id="@+id/stove_run_status_block"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    style="@style/progress_style_yellow_big"
                    custom:max="100"
                    custom:progress="0"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/textlines"
                    android:orientation="horizontal"
                    android:paddingBottom="3dp"
                    android:paddingTop="3dp">

                    <TextView
                        android:id="@+id/stove_left_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/emphasize_txt_color"
                        android:textSize="9sp"
                        tools:text="31" />

                    <TextView
                        style="@style/stove_item_txt_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/time_title" />
                </LinearLayout>
            </RelativeLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="*">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/stove_item_txt"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"></TextView>

                    <TextView
                        style="@style/stove_item_txt"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/form_title_1"></TextView>

                    <TextView
                        style="@style/stove_item_txt"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/form_title_2"></TextView>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <TextView
                        style="@style/stove_form_normal"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/form_item_1"></TextView>

                    <TextView
                        android:id="@+id/first_setting"
                        style="@style/stove_form_normal"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        tools:text="60"></TextView>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/form_border"
                        android:gravity="center">

                        <at.grabner.circleprogress.CircleProgressView
                            android:id="@+id/first_actual"
                            style="@style/circle_progress"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            custom:cpv_maxValue="100"></at.grabner.circleprogress.CircleProgressView>
                    </LinearLayout>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <TextView
                        style="@style/stove_form_normal"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/form_item_2"></TextView>

                    <TextView
                        android:id="@+id/second_setting"
                        style="@style/stove_form_normal"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        tools:text="60"></TextView>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/form_border"
                        android:gravity="center">

                        <at.grabner.circleprogress.CircleProgressView
                            android:id="@+id/second_actual"
                            style="@style/circle_progress"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            custom:cpv_maxValue="100"></at.grabner.circleprogress.CircleProgressView>
                    </LinearLayout>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <TextView
                        style="@style/stove_form_normal"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/form_item_3"></TextView>

                    <TextView
                        android:id="@+id/third_setting"
                        style="@style/stove_form_normal"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        tools:text="60"></TextView>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/form_border"
                        android:gravity="center">

                        <at.grabner.circleprogress.CircleProgressView
                            android:id="@+id/third_actual"
                            style="@style/circle_progress"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            custom:cpv_maxValue="100"></at.grabner.circleprogress.CircleProgressView>
                    </LinearLayout>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <TextView
                        style="@style/stove_form_normal"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/form_item_4"></TextView>

                    <TextView
                        android:id="@+id/four_setting"
                        style="@style/stove_form_normal"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        tools:text="60"></TextView>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/form_border"
                        android:gravity="center">

                        <at.grabner.circleprogress.CircleProgressView
                            android:id="@+id/four_actual"
                            style="@style/circle_progress"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            custom:cpv_maxValue="100"></at.grabner.circleprogress.CircleProgressView>
                    </LinearLayout>
                </TableRow>
            </TableLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    style="@style/stove_other_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product_model_title" />

                <TextView
                    android:id="@+id/product_model"
                    style="@style/stove_other_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="OPZV-120" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    style="@style/stove_other_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order_num_title" />

                <TextView
                    android:id="@+id/order_num"
                    style="@style/stove_other_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="31000" />

                <TextView
                    style="@style/stove_other_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order_unit" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/stove_num"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:gravity="center"
        style="@style/stove_description"
        tools:text="G123"/>
</LinearLayout>